--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,45 +1,32 @@
 name: Backend CI
-
-on:
-  push:
-    branches: [ main, develop ]
-  pull_request:
-    branches: [ main, develop ]
+on: [push, pull_request]
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.11"]
-
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -e ".[dev]"
-    
-    - name: Lint with ruff
-      run: |
-        ruff check .
-    
-    - name: Format check with black
-      run: |
-        black --check .
-    
-    - name: Import sorting check with isort
-      run: |
-        isort --check-only .
-    
-    - name: Test with pytest
-      run: |
-        pytest -q
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+          cache: 'pip'
+
+      - name: Install deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install fastapi "uvicorn[standard]" pydantic-settings sqlalchemy "psycopg[binary]" alembic pytest httpx ruff black isort
+
+      - name: Lint (ruff)
+        run: ruff check .
+
+      - name: Format check (black)
+        run: black --check .
+
+      - name: Import order (isort)
+        run: isort --check-only .
+
+      - name: Tests
+        run: python -m pytest -q
 
 
