feat(config): add settings, alembic migrations and update env example
- Add app/core/config.py with Settings class using Pydantic v2
- Update app/main.py to import settings for validation
- Update .env.example with new variable names (DB_URL, REDIS_URL, etc.)
- Initialize Alembic migrations in app/db/migrations
- Configure env.py to use Settings for database URL
- Update alembic.ini to use custom migration path

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,12 @@
 # Database
-POSTGRES_URL=postgresql://user:password@localhost:5432/evora
+DB_URL=postgresql://user:password@localhost:5432/evora
 
 # Redis
-REDIS_URL=redis://localhost:6379
+REDIS_URL=redis://localhost:6379/0
 
-# S3 Storage
-S3_ENDPOINT=https://s3.amazonaws.com
+# JWT
+JWT_SECRET=your-secret-key-here
 
 # Stripe
 STRIPE_PUBLIC_KEY=pk_test_...
 STRIPE_SECRET_KEY=sk_test_...
-
-# JWT
-JWT_SECRET=your-secret-key-here
