chore(db): switch alembic to psycopg v3 and set sqlalchemy.url from settings

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Database
-DB_URL=postgresql://user:password@localhost:5432/evora
+DB_URL=postgresql+psycopg://user:pass@localhost:5432/evora
 
 # Redis
 REDIS_URL=redis://localhost:6379/0
