docs(dev): add dockerized postgres setup and update env.example for DB_URL
- Add Локальная БД section to README.md with Docker command
- Update .env.example with evora credentials and port 5434
- Update config.py default DB_URL to use evora credentials
- Test Docker container and Alembic migrations successfully

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
 # Database
-DB_URL=postgresql+psycopg://user:pass@localhost:5432/evora
+DB_URL=postgresql+psycopg://evora:evora@localhost:5434/evora
 
 # Redis
 REDIS_URL=redis://localhost:6379/0
 
 # JWT
-JWT_SECRET=your-secret-key-here
+JWT_SECRET=change-me
 
 # Stripe
-STRIPE_PUBLIC_KEY=pk_test_...
-STRIPE_SECRET_KEY=sk_test_...
+STRIPE_PUBLIC_KEY=
+STRIPE_SECRET_KEY=
