chore(backend): fix ruff findings, remove hardcoded secret, add migrations package and tidy env.py
- Fix app/core/config.py: remove hardcoded JWT_SECRET, use SecretStr with generated default
- Add app/db/__init__.py and app/db/migrations/__init__.py to fix INP001
- Clean up app/db/migrations/env.py: sort imports, remove comments, fix style
- Remove unused settings import from app/main.py
- Update pyproject.toml: fix black target-version format
- Run ruff --fix, isort, black to ensure code quality

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ ignore = ["E501"]
 
 [tool.black]
 line-length = 88
-target-version = ['py311']
+target-version = ["py311"]
 
 [tool.isort]
 profile = "black"
